[wip] add create, delete, filer feats

--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@blueprintjs/core": "^5.10.3",
+    "@blueprintjs/icons": "^5.9.0",
     "@emotion/css": "^11.11.2",
+    "@types/node": "^20.14.7",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
