--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,16 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "src",
+    "paths": {
+      "Asset/*": ["Asset/*"],
+      "Component/*": ["Component/*"],
+      "Container/*": ["Container/*"],
+      "Scene/*": ["Scene/*"],
+      "Presentation/*": ["Presentation/*"],
+      "Lib/*": ["Lib/*"]
+    }
   },
   "include": ["src"]
 }
