--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@blueprintjs/icons": "^5.9.0",
     "@emotion/css": "^11.11.2",
     "@types/node": "^20.14.7",
+    "classnames": "^2.5.1",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
